--- a/lab 2.ipynb
+++ b/lab 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -22,8 +22,8 @@
     }
    ],
    "source": [
+    "pip install\n",
     "import math\n",
-    "\n",
     "# Initialize variables\n",
     "R_SI = 15  # Reference Signal to Interference ratio\n",
     "io = 6  # Interference\n",
